--- a/notes_app/docker-compose.yml
+++ b/notes_app/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build: .
@@ -24,6 +22,7 @@ services:
       python manage.py migrate &&
       python manage.py runserver 0.0.0.0:8000
       "
+    # command: tail -f /dev/null
 
   db:
     image: mysql:8.0
